# YSDA_cpp_course

./: .gitlab-ci.yml  CMakeLists.txt  README.md
advance/: CMakeLists.txt  readme.md  test_advance.cpp
any/: test.cpp
bot/: CMakeLists.txt
bot/fake/: CMakeLists.txt  fake.cpp
bot/tests/: test_api.cpp
calculator/: test.cpp
decoder/: CMakeLists.txt  readme.md
decoder/tests/: test.cpp
diff-pairs/: CMakeLists.txt  test.cpp
docs/: setup.md
docs/fraction/: fraction.h  readme.md
dungeon/: rogue.h  test.cpp
editor/: test.cpp
entrance/: entrance.h  readme.md  student.h  test.cpp
factorization/: factorization.h  test.cpp
fast-dither/: dither.h  kd_tree.h
fast-dither/tests/: test.cpp
hello-http/: CMakeLists.txt  test.cpp
hello-http/fake/: fake_server.h
itertools/: itertools.h
long-sum/: test.cpp
lru-cache/: lru_cache.h
multiplication/: multiplication.h
optional/: readme.md  test.cpp
pimpl/: ugly.cpp
quadratic/: quadratic.h
reader/: readers_util.h  test.cpp
ring-buffer/: ring_buffer.h
rotate/: rotate.h  test.cpp
rule-of-5/: readme.md
safe-transform/: test.cpp
scala-vector/: test.cpp
scheme-parser/: test.cpp
small-test-framework/: test.cpp
sort-students/: sort_students.h  test.cpp
stack/: stack.h
static-map/: static_map.h
universal_find/: CMakeLists.txt  readme.md  test.cpp  universal_find.h
